# school_info

./: .coveragerc  .env.example  .gitignore  README.md  README_RAG.md  generate_final_report.py  generate_source.py  main.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  test_api.sh  test_enhanced_rag.py  test_msa_crawl.py  test_rag_pipeline.py  verify_raw_extraction.py  visualize_result.py
docs/: ENHANCED_RAG_GUIDE.md  NOTION_MSA_DESIGN.md  UML_SCHOOL_INFO.md  school_info_service.md
downloads/B100000662/2025/teaching_plans/: 2025학년도 동도중 교수학습 및 평가 운영 계획_1학년 2학기(수정).json
downloads/D100000999/2025/teaching_plans/: 2025학년도 능인중 교수학습 및 평가 운영 계획_1학년 2학기(수정).json  2025학년도 능인중 교수학습 및 평가 운영 계획_2학년 2학기(수정).json  2025학년도 능인중 교수학습 및 평가 운영 계획_3학년 2학기.json  2025학년도 능인중학교 학업성적관리규정(정보공시용).json  2025학년도 동도중 교수학습 및 평가 운영 계획_1학년 2학기(수정).json  2025학년도 동도중 교수학습 및 평가 운영 계획_2학년 2학기(수정).json  2025학년도 동도중 교수학습 및 평가 운영 계획_3학년 2학기.json  2025학년도 동도중학교 학업성적관리규정(정보공시용).json
school_docs/B100000662/2024/: 2024_Result_Report.hwp
src/: agent_crawler.py  base_crawler.py  crawler.py  doc_processor.py  exceptions.py  models.py  pdf_gen.py  rag_service.py
src/rag/: chunker.py  engine.py  enhanced_json_generator.py  integrated_pipeline.py  parser.py
templates/: school_report.typ  teaching_plan.typ
tests/: conftest.py  test_agent_crawler.py  test_base_crawler.py  test_chunker.py  test_crawler.py  test_doc_processor.py  test_engine.py  test_enhanced_json_generator.py  test_exceptions.py  test_integrated_pipeline.py  test_models.py  test_parser.py  test_pdf_gen.py  test_rag_service.py
(+3 files in other folders)
